Hopefully working backend

--- a/web/weblog-backend/.gitignore
+++ b/web/weblog-backend/.gitignore
@@ -1,7 +1,7 @@
 /mobile/flask/__pycache__
 /mobile/flask/venv
 /db
-util.py
+res.py
 # Created by https://www.toptal.com/developers/gitignore/api/flask,python,pycharm
 # Edit at https://www.toptal.com/developers/gitignore?templates=flask,python,pycharm
 
